--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase": "^11.5.0",
     "lucide-react": "^0.482.0",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
