--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-router": "^7.4.0",
+    "react-router-dom": "^7.4.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
